@@ -1,14 +1,14 @@
 package com.edcm.backend.infrastructure.github;
 
-import com.edcm.backend.core.mappers.CommodityMapper;
+import com.edcm.backend.core.mappers.commodity.CommodityMapper;
 import com.edcm.backend.core.shared.data.CommodityDto;
 import com.edcm.backend.core.tools.GithubDataProvider;
-import com.edcm.backend.infrastructure.domain.github.GithubCommodityItemWithEddn;
 import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Service
 @RequiredArgsConstructor
 public class DefaultGithubDataProvider implements GithubDataProvider {
     private final GithubOperations githubOperations;
@@ -16,6 +16,7 @@ public class DefaultGithubDataProvider implements GithubDataProvider {
 
     @Override
     public List<CommodityDto> getCommodities() {
+
         return githubOperations.getCommodities()
             .getItems()
             .entrySet()
@@ -26,6 +27,6 @@ public class DefaultGithubDataProvider implements GithubDataProvider {
                 item.getValue().getName(),
                 item.getKey()))
             .map(mapper::githubItemToCommodityDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
